--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://dmsseason11.github.io/Semi-Wiki_Frontend/",
   "name": "semi-wiki",
   "private": true,
   "version": "0.0.0",
